@@ -282,11 +282,12 @@
   public function languages() {
    if (empty($this->langs)) {
     if ($this->page["Title"] == "") $this->openpage ("Title");
-    if (preg_match_all("/\/Sections\/Languages\/.*?>\s*(.*?)\s*</m",$this->page["Title"],$matches))
+    if (preg_match_all('!<a href="/language/.*?">\s*(.*?)\s*<!m',$this->page["Title"],$matches))
       $this->langs = $matches[1];
    }
    return $this->langs;
   }
+
 
  #--------------------------------------------------------------[ Genre(s) ]---
   /** Get the movies main genre
